--- a/assets/netRes/spriteRes/appears/appearsInTheTemple.plist
+++ b/assets/netRes/spriteRes/appears/appearsInTheTemple.plist
@@ -4,36 +4,49 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>itc_itt_Table.png</key>
+            <key>dl_npc_kuiji.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{646,2},{605,457}}</string>
+                <string>{{2,2},{581,1085}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{5,0},{605,457}}</string>
+                <string>{{0,0},{581,1085}}</string>
+                <key>sourceSize</key>
+                <string>{581,1085}</string>
+            </dict>
+            <key>itc_itt_Table.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{958,2},{615,457}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{615,457}}</string>
                 <key>sourceSize</key>
                 <string>{615,457}</string>
             </dict>
             <key>itc_itt__mh.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{292,1954},{64,60}}</string>
+                <string>{{722,1864},{64,64}}</string>
                 <key>offset</key>
-                <string>{0,2}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{64,60}}</string>
+                <string>{{0,0},{64,64}}</string>
                 <key>sourceSize</key>
                 <string>{64,64}</string>
             </dict>
             <key>itc_itt_door.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{616,1362},{423,497}}</string>
+                <string>{{1575,2},{423,497}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -46,7 +59,7 @@
             <key>itc_itt_fozhu.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{816,1273},{76,36}}</string>
+                <string>{{2,1999},{76,36}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -59,7 +72,7 @@
             <key>itc_itt_guanYin.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,697},{371,677}}</string>
+                <string>{{585,2},{371,677}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -72,215 +85,215 @@
             <key>itc_itt_lock.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{252,1954},{38,71}}</string>
+                <string>{{329,1864},{66,105}}</string>
                 <key>offset</key>
-                <string>{0,-2}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{14,19},{38,71}}</string>
+                <string>{{0,0},{66,105}}</string>
                 <key>sourceSize</key>
                 <string>{66,105}</string>
             </dict>
             <key>itc_itt_lockLight.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{634,1227},{66,101}}</string>
+                <string>{{261,1864},{66,105}}</string>
                 <key>offset</key>
-                <string>{0,-2}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,4},{66,101}}</string>
+                <string>{{0,0},{66,105}}</string>
                 <key>sourceSize</key>
                 <string>{66,105}</string>
             </dict>
             <key>itc_itt_mh2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{375,697},{489,528}}</string>
+                <string>{{754,1039},{489,620}}</string>
                 <key>offset</key>
-                <string>{0,-46}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,92},{489,528}}</string>
+                <string>{{0,0},{489,620}}</string>
                 <key>sourceSize</key>
                 <string>{489,620}</string>
             </dict>
             <key>itc_itt_mh3.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{642,693}}</string>
+                <string>{{2,1089},{750,773}}</string>
                 <key>offset</key>
-                <string>{-5,24}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{49,16},{642,693}}</string>
+                <string>{{0,0},{750,773}}</string>
                 <key>sourceSize</key>
                 <string>{750,773}</string>
             </dict>
             <key>itc_itt_num_.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{702,1227},{49,55}}</string>
+                <string>{{706,1935},{63,69}}</string>
                 <key>offset</key>
-                <string>{0,-2}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{7,9},{49,55}}</string>
+                <string>{{0,0},{63,69}}</string>
                 <key>sourceSize</key>
                 <string>{63,69}</string>
             </dict>
             <key>itc_itt_num_2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{521,1954},{51,55}}</string>
+                <string>{{657,1864},{63,69}}</string>
                 <key>offset</key>
-                <string>{0,-1}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{6,8},{51,55}}</string>
+                <string>{{0,0},{63,69}}</string>
                 <key>sourceSize</key>
                 <string>{63,69}</string>
             </dict>
             <key>itc_itt_num_3.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{759,1282},{55,53}}</string>
+                <string>{{641,1935},{63,69}}</string>
                 <key>offset</key>
-                <string>{0,-1}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{4,9},{55,53}}</string>
+                <string>{{0,0},{63,69}}</string>
                 <key>sourceSize</key>
                 <string>{63,69}</string>
             </dict>
             <key>itc_itt_num_4.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{358,1954},{53,57}}</string>
+                <string>{{592,1864},{63,69}}</string>
                 <key>offset</key>
-                <string>{-1,-2}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{4,8},{53,57}}</string>
+                <string>{{0,0},{63,69}}</string>
                 <key>sourceSize</key>
                 <string>{63,69}</string>
             </dict>
             <key>itc_itt_num_5.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{753,1227},{55,53}}</string>
+                <string>{{576,1935},{63,69}}</string>
                 <key>offset</key>
-                <string>{-1,-2}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{3,10},{55,53}}</string>
+                <string>{{0,0},{63,69}}</string>
                 <key>sourceSize</key>
                 <string>{63,69}</string>
             </dict>
             <key>itc_itt_num_6.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{574,1954},{49,55}}</string>
+                <string>{{527,1864},{63,69}}</string>
                 <key>offset</key>
-                <string>{0,-2}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{7,9},{49,55}}</string>
+                <string>{{0,0},{63,69}}</string>
                 <key>sourceSize</key>
                 <string>{63,69}</string>
             </dict>
             <key>itc_itt_num_7.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{468,1954},{51,55}}</string>
+                <string>{{511,1935},{63,69}}</string>
                 <key>offset</key>
-                <string>{1,-2}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{7,9},{51,55}}</string>
+                <string>{{0,0},{63,69}}</string>
                 <key>sourceSize</key>
                 <string>{63,69}</string>
             </dict>
             <key>itc_itt_num_8.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{413,1954},{53,55}}</string>
+                <string>{{462,1864},{63,69}}</string>
                 <key>offset</key>
-                <string>{-1,-2}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{4,9},{53,55}}</string>
+                <string>{{0,0},{63,69}}</string>
                 <key>sourceSize</key>
                 <string>{63,69}</string>
             </dict>
             <key>itc_itt_num_9.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{702,1284},{55,53}}</string>
+                <string>{{397,1864},{63,69}}</string>
                 <key>offset</key>
-                <string>{1,-1}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{5,9},{55,53}}</string>
+                <string>{{0,0},{63,69}}</string>
                 <key>sourceSize</key>
                 <string>{63,69}</string>
             </dict>
             <key>itc_itt_outDoor.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{625,1861},{65,159}}</string>
+                <string>{{585,878},{97,195}}</string>
                 <key>offset</key>
-                <string>{1,0}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{17,18},{65,159}}</string>
+                <string>{{0,0},{97,195}}</string>
                 <key>sourceSize</key>
                 <string>{97,195}</string>
             </dict>
             <key>itc_itt_outDoor_Light.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{646,461},{95,189}}</string>
+                <string>{{585,681},{97,195}}</string>
                 <key>offset</key>
-                <string>{1,0}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{2,3},{95,189}}</string>
+                <string>{{0,0},{97,195}}</string>
                 <key>sourceSize</key>
                 <string>{97,195}</string>
             </dict>
             <key>itc_itt_shouJuan.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{810,1227},{144,44}}</string>
+                <string>{{771,1930},{146,48}}</string>
                 <key>offset</key>
-                <string>{-1,-2}</string>
+                <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,4},{144,44}}</string>
+                <string>{{0,0},{146,48}}</string>
                 <key>sourceSize</key>
                 <string>{146,48}</string>
             </dict>
             <key>itc_itt_shouJuan2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{375,1227},{257,133}}</string>
+                <string>{{2,1864},{257,133}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -293,7 +306,7 @@
             <key>itc_itt_shouJuan4.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,1376},{612,576}}</string>
+                <string>{{958,461},{612,576}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -306,7 +319,7 @@
             <key>itc_itt_stone.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{127,1954},{123,74}}</string>
+                <string>{{386,1971},{123,74}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -319,7 +332,7 @@
             <key>itc_itt_stoneLight.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,1954},{123,74}}</string>
+                <string>{{261,1971},{123,74}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -339,7 +352,7 @@
             <key>size</key>
             <string>{2048,2048}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:a91a38f8256ee659e8a9661dd0b1d3eb:8bc5c5d711aae4021a438f1afa1a2aa8:fbabe6384cf43245535d1a9cb1a23934$</string>
+            <string>$TexturePacker:SmartUpdate:e6dfbc678e36d3dcbcef2aafa01fc7f2:1930f43160b5c9acc7a5ee79d152442e:fbabe6384cf43245535d1a9cb1a23934$</string>
             <key>textureFileName</key>
             <string>appearsInTheTemple.png</string>
         </dict>
